--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -16,7 +16,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Swiper CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+      <link rel="stylesheet" href="{% static 'css/swiper-bundle.min.css' %}" />
+
     <title>About Us</title>  
 </head>
 <body>
@@ -440,7 +441,8 @@
   });
 </script>
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="{% static 'js/swiper-bundle.min.js' %}"></script>
+
 <script>
   var swiper = new Swiper(".testimonial-wrapper", {
       slidesPerView: 1,
