--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -73,12 +73,18 @@
             <!-- Feedback Card 1 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 1">
+                    <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
-                    <h3 class="feedback-name">John Doe</h3>
-                    <p class="feedback-post">CEO at Example Inc.</p>
-                    <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h3 class="feedback-name">Dr Jagmeet Madan</h3>
+                    <p class="feedback-post"><i>Principal - Sir Vithaldas Thackersey College of Home Science for Women</i>
+                    </p>
+                   
+                    <p class="feedback-description">"We were envisaging a Library System that would become an integral part of student curriculum.
+                        Knowledge Resource Center Software (Library Management System) does this exactly and also
+                        covers the entire process of a modern library. The Techno Win team has been responsive to our
+                        requirements and has been supporting us for 3 years."</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -94,9 +100,16 @@
                     <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
-                    <h3 class="feedback-name">Jane Smith</h3>
-                    <p class="feedback-post">Founder at Tech Innovators</p>
-                    <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                    <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>    
+                    </p>
+                    <p class="feedback-description">"
+                        Technowin Teams’ helpfulness and understanding have played a crucial role in our journey, and we
+                        look forward to continuing this fruitful relationship. Technowin is now revamping our Website and
+                        developing our Knowledge hub adept with a content management Tool. With their expertise and
+                        support, we are confident in achieving even greater milestones together."<br><br>
+                    </p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -109,12 +122,20 @@
             <!-- Feedback Card 3 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/cidco.png' %}" alt="Feedback 3">
+                    <img src="{% static 'client_logo/img1.png' %}" alt="Feedback 3">
                 </div>
                 <div class="feedback-content">
-                    <h3 class="feedback-name">Alice Johnson</h3>
-                    <p class="feedback-post">CTO at Future Tech</p>
-                    <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h3 class="feedback-name">Dr. Ramnath Subramaniam</h3>
+                    <p class="feedback-post">
+                       <i> Government of Maharashtra - Chief Executive Officer – MVSTF </i>
+                    </p>
+                    <p class="feedback-description">"
+                        This letter is to certify that all deliverables under project of MVSTF GPDP MONTHLY
+                        PROGRESS REPORTING SYSTEM have been delivered in accordance with the work order. The system
+                        is functional and maintenance services are being provided effectively by Techno Win IT Infra Pvt Ltd.
+                        as per contractual terms and conditions.
+                        We appreciate your service and deliverables, With Best Wishes!"<br></p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -130,6 +151,7 @@
                     <img src="{% static 'client_logo/navi_mumbai.png'  %}" alt="Feedback 4" >
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Mark Williams</h3>
                     <p class="feedback-post">Product Manager at Innovations Ltd.</p>
                     <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
@@ -152,6 +174,7 @@
                     <img src="{% static 'client_logo/tata1.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">John Doe</h3>
                     <p class="feedback-post">CEO at Example Inc.</p>
                     <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
@@ -170,6 +193,7 @@
                     <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Jane Smith</h3>
                     <p class="feedback-post">Founder at Tech Innovators</p>
                     <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
@@ -188,6 +212,7 @@
                     <img src="{% static 'client_logo/tata.png' %}" alt="Feedback 3">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Alice Johnson</h3>
                     <p class="feedback-post">CTO at Future Tech</p>
                     <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
@@ -206,6 +231,7 @@
                     <img src="{% static 'client_logo/accenture.png'  %}" alt="Feedback 4">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Mark Williams</h3>
                     <p class="feedback-post">Product Manager at Innovations Ltd.</p>
                     <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
@@ -228,6 +254,7 @@
                     <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">John Doe</h3>
                     <p class="feedback-post">CEO at Example Inc.</p>
                     <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
@@ -246,6 +273,7 @@
                     <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Jane Smith</h3>
                     <p class="feedback-post">Founder at Tech Innovators</p>
                     <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
@@ -264,6 +292,7 @@
                     <img src="{% static 'client_logo/cidco.png' %}" alt="Feedback 3">
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Alice Johnson</h3>
                     <p class="feedback-post">CTO at Future Tech</p>
                     <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
@@ -282,6 +311,7 @@
                     <img src="{% static 'client_logo/navi_mumbai.png'  %}" alt="Feedback 4" >
                 </div>
                 <div class="feedback-content">
+                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
                     <h3 class="feedback-name">Mark Williams</h3>
                     <p class="feedback-post">Product Manager at Innovations Ltd.</p>
                     <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
