--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -244,7 +244,7 @@
       <div class="service-box">
         <img src="{% static 'images/service1.png' %}" alt="Service 1">
         <h3>Web Development</h3>
-        <p>TechnoWin IT Infra Pvt Ltd offers innovative web development solutions tailored to businesses’ needs. We create dynamic, responsive websites and web applications, ensuring a seamless user experience across all devices. Using the latest technologies, we help businesses enhance their online presence and achieve their goals effectively.</p>
+        <p>Technowin develops websites, web applications, E-Commerce Sites, Content Management Systems, Databases, Server and Network Security Systems etc. as per Customer Requirement.</p>
         <a href="Project" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -253,7 +253,8 @@
       <div class="service-box">
         <img src="{% static 'images/service4.png' %}" alt="Service 2">
         <h3>App Development</h3>
-        <p>TechnoWin IT Infra Pvt Ltd provides comprehensive data management solutions to help businesses organize, store, and analyze their data effectively. Our services ensure data accuracy, security, and easy access, enabling businesses to make informed decisions and streamline operations.</p>
+        <p>Apps for Mobile Devices like Cell Phones, Tablets etc. for both Android and IOS devices are developed by Technowin.  </p>
+        <br><br>
         <a href="Project" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -262,7 +263,7 @@
       <div class="service-box">
         <img src="{% static 'images/service3.png' %}" alt="Service 3">
         <h3>Program Management</h3>
-        <p>TechnoWin IT Infra Pvt Ltd offers expert program management services to help businesses plan, execute, and monitor projects successfully. We ensure alignment with business goals, optimize resources, and deliver results on time, helping organizations achieve their objectives efficiently.</p>
+        <p>Technowin provides Umbrella services for many of the Customers; Providing Hardware, Networking Services, Manpower, Cloud Services, Software and Maintenance, Project Management and Implementation.</p>
         <a href="Services" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -271,7 +272,7 @@
       <div class="service-box">
         <img src="{% static 'images/service5.png' %}" alt="Service 4">
         <h3>Hardware Networking</h3>
-        <p>TechnoWin IT Infra Pvt Ltd delivers robust hardware networking solutions to ensure seamless communication and connectivity within your business. From network setup to maintenance, we provide reliable and secure networking infrastructure that supports business operations and enhances overall efficiency.</p>
+        <p>Technowin Supplies Hardware and Networking Equipment and also providing Annual Maintenance Services to their Customers.</p>
         <a href="Services" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -280,7 +281,7 @@
       <div class="service-box">
         <img src="{% static 'images/service6.png' %}" alt="Service 5">
         <h3>Cloud Computing</h3>
-        <p>TechnoWin IT Infra Pvt Ltd offers scalable and secure cloud computing solutions that help businesses manage their data and applications efficiently. Our services provide flexibility, cost savings, and improved performance, enabling businesses to focus on growth while we handle their cloud infrastructure.</p>
+        <p>Technowin provides hosting services to its customer for hosting both self-developed software as well as Third Party ones.</p><br><br>
         <a href="Services" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -289,7 +290,8 @@
       <div class="service-box">
         <img src="{% static 'images/staff.png' %}" alt="Service 6">
         <h3>Manpower</h3>
-        <p>TechnoWin IT Infra Pvt Ltd provides highly skilled and reliable manpower solutions, offering businesses access to top-tier professionals for their specific needs. Our expert teams are equipped to handle diverse projects, ensuring efficiency and quality while reducing operational costs. We help businesses scale their workforce quickly and effectively, allowing them to focus on their core operations and growth.</p>
+        <p>Technowin provides Manpower Services for Software Coordination and Implementation, scanning, data entry, cataloguing and other IT related Tasks.</p>
+        <br>
         <a href="Services" class="read-more">
           <span>Read More</span>
           <i class="fas fa-arrow-right"></i>
@@ -320,6 +322,8 @@
         <!-- Brochure Download -->
         <a href="{% static 'images/technowin.pdf' %}" class="social-icon brochure" download>
             <img src="{% static 'images/download.png' %}" alt="Download Brochure">
+            <!-- Tooltip text that will be displayed on hover -->
+            <span class="tooltip">Download Brochure</span>
         </a>
         <!-- Chatbot Icon -->
      
@@ -329,7 +333,7 @@
 <!-- project video section -->
     <section id="project-videos">
         <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
-            <u>Projects Developed By Us</u>
+            <u>Innovations by Us</u>
         </h2>
         <div class="card-container">
             <!-- Card 1 -->
@@ -349,7 +353,7 @@
             <div class="card">
                 <h3>App Development</h3>
                 <video controls>
-                    <source src="{% static 'project_data/app_video.mp4' %}" type="video/mp4">
+                    <source src="{% static 'project_data/technowin_app_video.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd has developed an intuitive, high-performance app 🌟📱. With a focus on sleek design, smooth functionality, and robust security 🔐, it meets the unique needs of businesses. Ideal for enhancing mobile engagement! 🚀📲</p>
@@ -375,7 +379,7 @@
             <div class="card">
                 <h3>Hardware Project</h3>
                 <video controls>
-                    <source src="{% static 'project_data/eb_video.mp4' %}" type="video/mp4">
+                    <source src="{% static 'project_data/web_video.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <p>TechnoWin IT Infra Pvt Ltd provides high-quality, durable hardware solutions 🖥️🔧. Designed for optimal performance and reliability, it supports businesses with cutting-edge technology 💡. Perfect for enhancing infrastructure and boosting productivity! 🚀</p>
@@ -434,21 +438,23 @@
             </div>
             <!-- Card 2: Title, Description, Read More -->
             <div class="tech-card tech-content-card">
-                <h3 class="tech-card-title">Explore Our Technology Stack</h3>
-                <p class="tech-card-description">
+              
+                <h3 class="tech-card-title">Explore Our Technology Stack</h3><br>
+                <img src="{% static 'images/technologies.png' %}" alt="Tech Image" class="tech-card-img">
+                {% comment %} <p class="tech-card-description">
                     <u>Frameworks</u> 🖥️: Frameworks like Django, Laravel, and CodeIgniter provide pre-built structures for building web applications, helping developers streamline the development process. 🚀
-<br> <br>
+                    <br><br>
                     <u>Languages</u> 💻: Programming languages such as Python, PHP, Dart, Kotlin, ReactJS, and AngularJS are essential tools for creating dynamic websites and apps, offering flexibility and scalability. 🌐
-                    <br> <br>                   
+                    <br><br>
                     <u>Cloud</u> ☁️: Cloud services like AWS, Azure, and GoDaddy provide scalable infrastructure for hosting, data storage, and computing, ensuring seamless access to applications and data anywhere. 🔒
-                    <br>  <br>                 
+                    <br><br>
                     <u>Web Servers</u> 🌐: Web servers like IIS, Nginx, and Apache are responsible for delivering website content to users by handling HTTP requests, ensuring fast and reliable website performance. ⚡
-                </p>
+                </p> {% endcomment %}
                 <a href="project.html" class="read-more">
                     Read More
-                 </a>
+                </a>
             </div>
-        </div>
+            
     </section>
     
 
