--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -27,7 +27,7 @@
         
         <!-- Card with image -->
         <div class="image-card">
-            <img src="{% static 'images/services_background.gif' %}" alt="Image Card" class="card-image" />
+            <img src="{% static 'images/services_background.png' %}" alt="Image Card" class="card-image" />
         </div>
     </section>
 
