--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -76,7 +76,7 @@
                     <img src="{% static 'client_logo/svl.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h4 class="project-feedback-name"><u><i>"E-library <br> Web App"</u></i></h4><br><br>
                     <h3 class="feedback-name">Dr Jagmeet Madan</h3>
                     <p class="feedback-post"><i>Principal - Sir Vithaldas Thackersey College of Home Science for Women</i>
                     </p>
@@ -100,7 +100,7 @@
                     <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h4 class="project-feedback-name"><u><i>"Content <br> Management"</u></i></h4><br><br>
                     <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
                     <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>    
                     </p>
@@ -108,7 +108,7 @@
                         Technowin Teams’ helpfulness and understanding have played a crucial role in our journey, and we
                         look forward to continuing this fruitful relationship. Technowin is now revamping our Website and
                         developing our Knowledge hub adept with a content management Tool. With their expertise and
-                        support, we are confident in achieving even greater milestones together."<br><br>
+                        support, we are confident in achieving even greater milestones together."<br>
                     </p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
@@ -125,7 +125,7 @@
                     <img src="{% static 'client_logo/img1.png' %}" alt="Feedback 3">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
+                    <h4 class="project-feedback-name"><u><i>"MVSTF GPDP Monthly Progress Reporting System"</u></i></h4><br>
                     <h3 class="feedback-name">Dr. Ramnath Subramaniam</h3>
                     <p class="feedback-post">
                        <i> Government of Maharashtra - Chief Executive Officer – MVSTF </i>
@@ -151,10 +151,16 @@
                     <img src="{% static 'client_logo/navi_mumbai.png'  %}" alt="Feedback 4" >
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Mark Williams</h3>
-                    <p class="feedback-post">Product Manager at Innovations Ltd.</p>
-                    <p class="feedback-description">"Exceptional service! Would absolutely recommend their expertise."</p>
+                    <h4 class="project-feedback-name"><u><i>"School Management Software"</u></i></h4><br><br>
+                    <h3 class="feedback-name">Mr. Suresh Salian</h3>
+                    <p class="feedback-post"><i>
+                        Proprietor - ACE Computer Education/ Atharv Systec </i>
+                    </p>
+                    <p class="feedback-description">"
+                        We are pleased with the Technowin School Management Software. We have received excellent
+                        training and support, and our requests for information or assistance are always answered quickly. I
+                        would certainly recommend this Software to any school looking to digitalize their processes.
+                    "</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -174,10 +180,17 @@
                     <img src="{% static 'client_logo/tata1.png' %}" alt="Feedback 1">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">John Doe</h3>
-                    <p class="feedback-post">CEO at Example Inc.</p>
-                    <p class="feedback-description">"Amazing service! The team exceeded our expectations. Highly recommend for anyone in need of tech solutions."</p>
+                    <h4 class="project-feedback-name"><u><i>"Register Software"</u></i></h4><br>
+                    <h3 class="feedback-name">Director
+                    </h3>
+                    <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd   </i> 
+                    </p>
+                    <p class="feedback-description">"
+                        Since partnering with Techno Win It Infra Pvt Ltd in 2022, our collaboration has been outstanding. It
+                        all began with the development of the Register Software, a decision that has proven crucial to our
+                        success. Thanks to Techno Win's expertise, the software operates flawlessly, and their team is
+                        reliable in addressing any issues.
+                    "</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -273,10 +286,13 @@
                     <img src="{% static 'client_logo/lkn.png' %}" alt="Feedback 2">
                 </div>
                 <div class="feedback-content">
-                    <h4 class="project-feedback-name"><u><i>"E-library Web App"</u></i></h4><br>
-                    <h3 class="feedback-name">Jane Smith</h3>
-                    <p class="feedback-post">Founder at Tech Innovators</p>
-                    <p class="feedback-description">"Fantastic experience from start to finish. Their attention to detail is unmatched. Looking forward to working again."</p>
+                    <h4 class="project-feedback-name"><u><i>"LKN Audit Software"</u></i></h4><br>
+                    <h3 class="feedback-name">Mr. Hemant Nakashe</h3>
+                    <p class="feedback-post"><i>Director - L. K. Nakashe Consultants Pvt. Ltd </i>
+                    </p>
+                    <p class="feedback-description">"Impressed by their work, we decided to develop the LKN Audit Software, which once again delivered
+                        excellent results. The software operates seamlessly, reflecting the dedication and skill of Techno Win
+                        team."</p><br><br><br>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
