--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -186,6 +186,21 @@
         </div>
     </section>
 
+    <section id="video-section">
+        <div class="video-container">
+          <h2 class="video-title">Amazing Nature Documentary</h2>
+          <div class="video-wrapper">
+            <video class="video" controls>
+              <source src="{% static 'images/life_in_technowin_video.mp4' %}" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+        </div>
+      </section>
+      
+      
+
+
 <!-- why-techno-section Section --> 
     <section class="why-techno-section">
         {% comment %} <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
