--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -188,7 +188,7 @@
 
     <section id="video-section">
         <div class="video-container">
-          <h2 class="video-title">Amazing Nature Documentary</h2>
+          <h2 class="video-title">💾 Creating Memories|Technowin IT Infra Pvt Ltd 🌟</h2>
           <div class="video-wrapper">
             <video class="video" controls>
               <source src="{% static 'images/life_in_technowin_video.mp4' %}" type="video/mp4">
